Document javaPreviewNeeded in README.md.